--- a/pac/net/k8s/aks/templates/memealyzernetqueueservice-deployment.yaml
+++ b/pac/net/k8s/aks/templates/memealyzernetqueueservice-deployment.yaml
@@ -8,13 +8,13 @@ metadata:
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
-    io.kompose.service: azsdkdemonetqueueservice
-  name: azsdkdemonetqueueservice
+    io.kompose.service: memealyzernetqueueservice
+  name: memealyzernetqueueservice
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      io.kompose.service: azsdkdemonetqueueservice
+      io.kompose.service: memealyzernetqueueservice
   strategy:
     type: Recreate
   template:
@@ -26,7 +26,8 @@ spec:
         kompose.version: 1.21.0 (992df58d8)
       creationTimestamp: null
       labels:
-        io.kompose.service: azsdkdemonetqueueservice
+        io.kompose.service: memealyzernetqueueservice
+        checksum/config: ${CONTAINER_TAG}
     spec:
       containers:
         - env:
@@ -145,18 +146,10 @@ spec:
                 configMapKeyRef:
                   key: AZURE_STORAGE_CONNECTION_STRING_SECRET_NAME
                   name: env
-          image: azsdkdemojongdevacr.azurecr.io/azsdkdemonetqueueservice:1.0.0
-          imagePullPolicy: "IfNotPresent"
-          name: azsdkdemonetqueueservice
+          image: ${AZURE_CONTAINER_REGISTRY_SERVER}/memealyzernetqueueservice:${CONTAINER_TAG}
+          imagePullPolicy: "Always"
+          name: memealyzernetqueueservice
           resources: {}
-          volumeMounts:
-            - mountPath: /root/.azure
-              name: azsdkdemonetqueueservice-hostpath0
       restartPolicy: Always
       serviceAccountName: ""
-      volumes:
-        - hostPath:
-            path: /run/desktop/mnt/host/wsl/.azure
-            type: Directory
-          name: azsdkdemonetqueueservice-hostpath0
 status: {}
