--- a/pac/net/k8s/aks/templates/.bin/env-configmap.yaml
+++ b/pac/net/k8s/aks/templates/.bin/env-configmap.yaml
@@ -1,27 +1,27 @@
 apiVersion: v1
 data:
-  AZURE_COSMOS_ENDPOINT: https://azsdkdemoauthcosmosaccount.documents.azure.com:443/
-  AZURE_FORM_RECOGNIZER_ENDPOINT: https://azsdkdemoauthformrecognizer.cognitiveservices.azure.com/
-  AZURE_KEYVAULT_ENDPOINT: https://azsdkdemoauthkeyvault.vault.azure.net/
-  AZURE_STORAGE_BLOB_ENDPOINT: https://azsdkdemoauthstorage.blob.core.windows.net/
-  AZURE_STORAGE_QUEUE_ENDPOINT: https://azsdkdemoauthstorage.queue.core.windows.net/
-  AZURE_TEXT_ANALYTICS_ENDPOINT: https://azsdkdemoauthtextanalytics.cognitiveservices.azure.com/
-  AZURE_STORAGE_TABLE_ENDPOINT: https://azsdkdemoauthstorage.table.core.windows.net/
-  AZURE_APP_CONFIG_ENDPOINT: https://azsdkdemoauthappconfig.azconfig.io
-  FUNCTIONS_ENDPOINT: http://azsdkdemoauthfunction.azurewebsites.net
+  AZURE_COSMOS_ENDPOINT: https://memealyzerprodcosmosaccount.documents.azure.com:443/
+  AZURE_FORM_RECOGNIZER_ENDPOINT: https://memealyzerprodformrecognizer.cognitiveservices.azure.com/
+  AZURE_KEYVAULT_ENDPOINT: https://memealyzerprodkeyvault.vault.azure.net/
+  AZURE_STORAGE_BLOB_ENDPOINT: https://memealyzerprodstorage.blob.core.windows.net/
+  AZURE_STORAGE_QUEUE_ENDPOINT: https://memealyzerprodstorage.queue.core.windows.net/
+  AZURE_TEXT_ANALYTICS_ENDPOINT: https://memealyzerprodtextanalytics.cognitiveservices.azure.com/
+  AZURE_STORAGE_TABLE_ENDPOINT: https://memealyzerprodstorage.table.core.windows.net/
+  AZURE_APP_CONFIG_ENDPOINT: https://memealyzerprodappconfig.azconfig.io
+  FUNCTIONS_ENDPOINT: http://memealyzerprodfunction.azurewebsites.net
   AZURE_STORAGE_CLIENT_SYNC_QUEUE_NAME: sync
   AZURE_SIGNALR_CONNECTION_STRING_SECRET_NAME: SignalRConnectionString
   AZURE_STORAGE_CONNECTION_STRING_SECRET_NAME: StorageConnectionString
-  AZURE_CONTAINER_REGISTRY_SERVER: azsdkdemoauthacr.azurecr.io
+  AZURE_CONTAINER_REGISTRY_SERVER: memealyzerprodacr.azurecr.io
   AZURE_COSMOS_COLLECTION: images
-  AZURE_COSMOS_DB: azimageai
+  AZURE_COSMOS_DB: memealyzer
   AZURE_COSMOS_KEY_SECRET_NAME: CosmosKey
   AZURE_STORAGE_BLOB_CONTAINER_NAME: blobs
   AZURE_STORAGE_QUEUE_MSG_COUNT: "10"
   AZURE_STORAGE_QUEUE_NAME: messages
   AZURE_STORAGE_QUEUE_RECEIVE_SLEEP: "1"
   MEME_ENDPOINT: https://meme-api.herokuapp.com/gimme/wholesomememes
-  AZURE_STORAGE_ACCOUNT_NAME: azsdkdemoauthstorage
+  AZURE_STORAGE_ACCOUNT_NAME: memealyzerprodstorage
   AZURE_STORAGE_TYPE: COSMOS_SQL
   AZURE_STORAGE_KEY_SECRET_NAME: StorageKey
   AZURE_STORAGE_TABLE_NAME: images
@@ -29,5 +29,5 @@ kind: ConfigMap
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: azsdkdemonetapi-env
+    io.kompose.service: memealyzernetapi-env
   name: env
