--- a/pac/net/k8s/aks/templates/.bin/web-configmap.yaml
+++ b/pac/net/k8s/aks/templates/.bin/web-configmap.yaml
@@ -5,6 +5,6 @@ apiVersion: v1
 data:
   appsettings.json: |-
     {
-        "API_ENDPOINT": "http://13.77.151.132",
-        "FUNCTIONS_ENDPOINT": "http://azsdkdemoauthfunction.azurewebsites.net"
+        "API_ENDPOINT": "http://52.156.73.84",
+        "FUNCTIONS_ENDPOINT": "http://memealyzerprodfunction.azurewebsites.net"
     }
