--- a/pac/net/k8s/local/templates/web-configmap.yaml
+++ b/pac/net/k8s/local/templates/web-configmap.yaml
@@ -6,5 +6,5 @@ data:
   appsettings.json: |-
     {
         "API_ENDPOINT": "http://localhost:31389",
-        "FUNCTIONS_ENDPOINT": "http://localhost:3080"
+        "FUNCTIONS_ENDPOINT": "${FUNCTIONS_ENDPOINT}"
     }
