--- a/src/net/Services/Functions/local.settings.json
+++ b/src/net/Services/Functions/local.settings.json
@@ -1,12 +1,13 @@
 {
-    "IsEncrypted": false,
-    "Values": {
-      "AzureWebJobsStorage": "UseDevelopmentStorage=true;",
-      "FUNCTIONS_WORKER_RUNTIME": "dotnet"
-    },
-    "Host": {
-      "CORS": "*",
-      "CORSCredentials": false,
-      "LocalHttpPort": 3080
-    }
+  "IsEncrypted": false,
+  "Values": {
+    "AzureWebJobsStorage": "UseDevelopmentStorage=true;",
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet",
+    "ClientSyncQueueConnectionString": ""
+  },
+  "Host": {
+    "CORS": "*",
+    "CORSCredentials": false,
+    "LocalHttpPort": 3080
   }
+}
