--- a/src/net/Services/QueueService/QueueService.csproj
+++ b/src/net/Services/QueueService/QueueService.csproj
@@ -18,7 +18,7 @@
     <ProjectReference Include=".\..\..\Lib\Lib.csproj" />
   </ItemGroup>
 
-  <PropertyGroup>
+  <!-- <PropertyGroup>
     <RestoreSources>https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-net/nuget/v3/index.json;https://api.nuget.org/v3/index.json</RestoreSources>
-  </PropertyGroup>
+  </PropertyGroup> -->
 </Project>
