--- a/.github/workflows/aks-prod-deploy.yml
+++ b/.github/workflows/aks-prod-deploy.yml
@@ -1,13 +1,13 @@
 on:
   workflow_dispatch:
     branches:
-      - funcsignalr
+      - prod
   push:
     branches:
-      - funcsignalr
+      - prod
   pull_request:
     branches:
-      - funcsignalr
+      - prod
 env:
   AZURE_FUNCTIONAPP_NAME: ${{ secrets.AZURE_FUNCTION_APP_NAME_PROD }}  # set this to your application's name
   AZURE_FUNCTIONAPP_PACKAGE_PATH: './src/net/Services/Functions'    # set this to the path to your web app project, defaults to the repository root
