chmod .sh files

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # TERRAFORM VARIABLES
 TF_VAR_basename=memealyzerdev
 TF_VAR_location=westus2
-TF_VAR_failover_loaction=eastus2
+TF_VAR_failover_location=eastus2
 
 # TERRAFORM OUTPUTS
 AZURE_COSMOS_ENDPOINT=https://memealyzerdevcosmosaccount.documents.azure.com:443/
@@ -19,7 +19,8 @@ AZURE_FUNCTION_APP_NAME=memealyzerdevfunction
 K8S_CONTEXT=docker-desktop
 #API_ENDPOINT=http://52.250.2.137
 API_ENDPOINT=http://localhost:2080
-CONTAINER_TAG=1.0.0
+#CONTAINER_TAG=1.0.0
+CONTAINER_TAG=1.0.0-local
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
 AZURE_STORAGE_QUEUE_NAME=messages
 AZURE_STORAGE_QUEUE_MSG_COUNT=10
