--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -10,6 +10,7 @@ on:
       - tye
 env:
   ROOT: '../../../..'
+  WORKSPACE: 'staging'
   AZURE_FUNCTIONAPP_NAME: ${{ secrets.AZURE_FUNCTION_APP_NAME_STAGING }}  # set this to your application's name
   AZURE_FUNCTIONAPP_PACKAGE_PATH: './src/net/Services/Functions'    # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '5.0.100-rc.2.20479.15'              # set this to the dotnet version to use
@@ -70,7 +71,7 @@ jobs:
 
     - name: 'tye deploy'
       run: |
-        tye deploy ./bin/tye.yaml -v Debug
+        tye deploy ./bin/tye.yaml -v Debug --tags $WORKSPACE
 
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
