Update to use $env

--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -59,7 +59,7 @@ jobs:
     
     - name: 'Gen Kubernetes files'
       run: |
-        pushd ${{ env.GITHUB_WORKSPACE }}/pac/net/tye/aks
+        pushd $GITHUB_WORKSPACE/pac/net/tye/aks
         sh ../shared/genfiles.sh
         popd
   
@@ -72,7 +72,7 @@ jobs:
 
     - name: 'tye deploy'
       run: |
-        tye deploy ${{ env.GITHUB_WORKSPACE }}/pac/net/tye/aks/.bin/tye.yaml -v Debug --tags ${{ env.WORKSPACE }}
+        tye deploy $GITHUB_WORKSPACE/pac/net/tye/aks/.bin/tye.yaml -v Debug --tags ${{ env.WORKSPACE }}
 
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
