--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - tye
 env:
-  ROOT: '../../../..'
+  TYE_ROOT: $GITHUB_WORKSPACE
   WORKSPACE: 'staging'
   AZURE_FUNCTIONAPP_NAME: ${{ secrets.AZURE_FUNCTION_APP_NAME_STAGING }}  # set this to your application's name
   AZURE_FUNCTIONAPP_PACKAGE_PATH: './src/net/Services/Functions'    # set this to the path to your web app project, defaults to the repository root
