--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -76,6 +76,7 @@ jobs:
 
     - name: 'tye deploy'
       run: |
+        cat $GITHUB_WORKSPACE/pac/net/tye/aks/.bin/tye.yaml
         tye deploy $GITHUB_WORKSPACE/pac/net/tye/aks/.bin/tye.yaml -v Debug --tags ${{ env.WORKSPACE }}
 
     - name: 'Login via Azure CLI'
