--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -11,7 +11,7 @@ on:
 env:
   ROOT: '/home/runner/work/memealyzer/memealyzer'
   TYE_ROOT: '/home/runner/work/memealyzer/memealyzer'
-  DOTNET_FILENAME: '.env.staging'
+  DOTENV_FILENAME: '.env.staging'
   WORKSPACE: 'staging'
   AZURE_FUNCTIONAPP_NAME: ${{ secrets.AZURE_FUNCTION_APP_NAME_STAGING }}  # set this to your application's name
   AZURE_FUNCTIONAPP_PACKAGE_PATH: './src/net/Services/Functions'    # set this to the path to your web app project, defaults to the repository root
