--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -15,7 +15,7 @@ env:
   WORKSPACE: 'staging'
   AZURE_FUNCTIONAPP_NAME: ${{ secrets.AZURE_FUNCTION_APP_NAME_STAGING }}  # set this to your application's name
   AZURE_FUNCTIONAPP_PACKAGE_PATH: './src/net/Services/Functions'    # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '3.1.300'              # set this to the dotnet version to use
+  DOTNET_VERSION: '5.0.100-rc.2.20479.15'              # set this to the dotnet version to use
   CONTAINER_TAG: ${{ github.sha }}
   AZURE_CONTAINER_REGISTRY_SERVER: ${{ secrets.AZURE_CONTAINER_REGISTRY_SERVER_STAGING }}
   API_ENDPOINT: ${{ secrets.API_ENDPOINT_STAGING }}
@@ -84,6 +84,11 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ env.AZURE_CREDENTIALS }}
+
+    - name: 'Setup DotNet 3.1.300 Environment'
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '3.1.300'
 
     - name: 'Resolve Project Dependencies Using Dotnet'
       shell: bash
