--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -18,6 +18,7 @@ env:
   DOTNET_VERSION: '5.0.100-rc.2.20479.15'              # set this to the dotnet version to use
   #CONTAINER_TAG: ${{ github.sha }}
   CONTAINER_TAG: ${{ github.run_number }}
+  # Issue: Because I cannot set image container tag with Tye, I need to do this type of workaround with a numberic container tag.
   AZURE_CONTAINER_REGISTRY_SERVER: ${{ secrets.AZURE_CONTAINER_REGISTRY_SERVER_STAGING }}
   API_ENDPOINT: ${{ secrets.API_ENDPOINT_STAGING }}
   FUNCTIONS_ENDPOINT: ${{ secrets.FUNCTIONS_ENDPOINT_STAGING }}
@@ -54,6 +55,8 @@ jobs:
       with:
         dotnet-version: '3.1.300'
 
+      # Issue: We need 3.1.300 b/c tye is compiled against it. Will be resolved soon.
+      # https://github.com/dotnet/tye/issues/733
     - name: 'Install Tye tools'
       run: |
         dotnet tool install -g Microsoft.Tye --version "0.5.0-*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet5/nuget/v3/index.json
@@ -82,6 +85,10 @@ jobs:
       run: |
         tye deploy $GITHUB_WORKSPACE/pac/net/tye/aks/.bin/tye.yaml -v Debug --tags ${{ env.WORKSPACE }}
 
+    - name: 'Apply Kubernetes Tweaks'
+      run: |
+        kubectl apply -f $GITHUB_WORKSPACE/pac/net/tye/aks/templates/.
+      # Issue: We need to do this because Tye doesn't support targetPort and containerPort issue
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
