--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -9,8 +9,8 @@ on:
     branches:
       - tye
 env:
-  ROOT: '/home/runner/work/memealyzer/memealyzer'
-  TYE_ROOT: '/home/runner/work/memealyzer/memealyzer'
+  ROOT: ${{ github.workspace }}
+  TYE_ROOT: ${{ github.workspace }}
   DOTENV_FILENAME: '.env.staging'
   WORKSPACE: 'staging'
   AZURE_FUNCTIONAPP_NAME: ${{ secrets.AZURE_FUNCTION_APP_NAME_STAGING }}  # set this to your application's name
@@ -57,6 +57,7 @@ jobs:
 
       # Issue: We need 3.1.300 b/c tye is compiled against it. Will be resolved soon.
       # https://github.com/dotnet/tye/issues/733
+      
     - name: 'Install Tye tools'
       run: |
         dotnet tool install -g Microsoft.Tye --version "0.5.0-*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet5/nuget/v3/index.json
@@ -89,6 +90,7 @@ jobs:
       run: |
         kubectl apply -f $GITHUB_WORKSPACE/pac/net/tye/aks/templates/.
       # Issue: We need to do this because Tye doesn't support targetPort and containerPort issue
+
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
